# AgentTool

./: .env.example  .env.staging  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .tsbuildinfo  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ENVIRONMENT_SETUP.md  INSTALLATION.md  LICENSE  PLAYWRIGHT_SETUP.md  README.md  SESSION_MANAGEMENT.md  TESTING.md  TODO.md  VERCEL_DEPLOYMENT.md  bun.lockb  check_vercel_status.sh  claude-code-docker  claude-docker.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  install-desktop.sh  install.sh  lint-staged.config.js  package-lock.json  package.json  plan.md  playwright.config.ts  setup.sh  todo.md  tsconfig.json  typecheck-placeholder.ts  (+3 more)
connector/: .eslintrc.js  TESTING.md  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_ADAPTER_SPEC.md  CRYSTAL_COMPARISON.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  MCP_INTEGRATION_SPEC.md  PROCESS_MANAGEMENT_SPEC.md  PROJECT_STRUCTURE.md  README.md  SECURITY_SPEC.md  USER_GUIDE.md  middlemanager.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-ui.html  validate-features.js  vercel.json  vite.config.ts
scripts/: deploy.sh  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent_registry.rs  claude_code_adapter.rs  commands.rs  database.rs  gemini_cli_adapter.rs  git_worktree_manager.rs  main.rs  middle_manager.rs  models.rs  session_manager.rs
(+102 files in other folders)
