[package]
name = "agenttool"
version = "0.1.0"
description = "Hierarchical Multi-Agent System for AI-Powered Development"
authors = ["AgentTool Team"]
license = "MIT"
repository = "https://github.com/yourusername/AgentTool"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
rusqlite = { version = "0.30", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }